<resources>
    <string name="app_name">video_call_webex</string>
    <string name="webex_login_failed">Webex login failed</string>
    <string name="webex_retry">Retry</string>
    <string name="mute_all_self">Mute all will not work for self.</string>
    <string name="close">Close</string>
    <string name="participants">Participants</string>
    <string name="mute_all">Mute All</string>
    <string name="unmute_all">Unmute All</string>
    <string name="mute_feature_is_not_available_for_cucm_calls">Mute feature is not available for CUCM calls</string>
    <string name="message">Message</string>
    <string name="let_in_confirmation">Do you want to let in this participant?</string>
    <string name="receiving_off">OFF</string>
    <string name="receiving_on">ON</string>
    <string name="receiving_video">Receiving Video</string>
    <string name="receiving_audio">Receiving Audio</string>
    <string name="receiving_sharing">Receiving Sharing</string>
    <string name="scaling_mode">Scaling Mode</string>
    <string name="scaling_mode_fit">Fit</string>
    <string name="scaling_mode_cropFill">CropFill</string>
    <string name="scaling_mode_stretchFill">StretchFill</string>
    <string name="scaling_mode_unknown">Unknown</string>
    <string name="scaling_mode_not_supported">Not Supported</string>
    <string name="composite_stream">Composite Layout</string>
    <string name="composite_stream_filmstrip">FILMSTRIP</string>
    <string name="composite_stream_single">SINGLE</string>
    <string name="composite_stream_grid">GRID</string>
    <string name="composite_stream_unknown">Unknown</string>
    <string name="composite_stream_not_supported">Not Supported</string>
    <string name="video_stream_mode">Video stream mode</string>
    <string name="video_stream_mode_composited">Composited</string>
    <string name="video_stream_mode_multi">Multi-stream</string>
    <string name="ongoing">OnGoing...</string>
    <string name="error_occurred">An Error Occurred</string>
    <string name="call_failed">Call Failed</string>
    <string name="waiting_call_header">Waiting for call…</string>
    <string name="waiting_for_host">Please wait for the host to join the meeting…</string>
    <string name="waiting_for_others">Waiting for Others…</string>
    <string name="incoming_call">Incoming call…</string>
    <string name="calling">Calling…</string>
    <string name="mute">Mute</string>
    <string name="hold">Hold</string>
    <string name="speaker">Speaker</string>
    <string name="add_call">Add Call</string>
    <string name="merge_call">Merge Calls</string>
    <string name="video">Video</string>
    <string name="swap_camera">Swap Camera</string>
    <string name="transfer_call">Transfer Call</string>
    <string name="screen_share">Screen Share</string>
    <string name="more_option">MoreOption</string>
    <string name="start_associated_call_failed">Call Association Failed</string>
    <string name="are_you_host">Are you a host?</string>
    <string name="meeting_error">Meeting Error</string>
    <string name="enter_meeting_pin">Enter meeting password</string>
    <string name="host_key_required">Please enter host key</string>
    <string name="meeting_pin_required">Please enter meeting password</string>
    <string name="enter_host_key">Enter host key</string>
    <string name="enter_user_email_address">Enter email address of user</string>
    <string name="set_log_level">Set Log Level</string>
    <string name="enable_console_log">Enable Console Log</string>
    <string name="notification_start_share_foreground_text">You are starting screen share.</string>
    <string name="notification_share_foreground_title">Screen Share</string>
    <string name="onCall">OnCall</string>
    <string name="meeting_disconnected">Meeting Disconnected</string>
    <string name="oops_meeting_disconnected">Oops!, Meeting Disconnected</string>
    <string name="meeting_ended">Meeting Ended</string>
    <string name="call_not_started">Admin not start the meeting, So unable to join the meeting</string>
    <string name="meeting">Meeting</string>
    <string name="activate_webex_account">Activate Your WebEx Account</string>
    <string name="update_interest">Interest is not yet updated by you. Please update it.</string>
    <string name="call_meeting_join">Join</string>
    <string name="activate_webex_note">Note : You can\'t able to join WebEx classrooms until your WebEx gets activated,  <u><font color='#FF0000'>Click Here</font></u> to activate WebEx</string>
    <string name="webex_password_error">WebEx password must contain greater than 4 character\'s</string>
    <string name="activate_webex_account_form_txt">Enter your WebEx Password for Activate your account <font color='#FF0000'>*</font></string>
    <string name="webex_initiate_msg">Please wait, we will connect your meeting shortly, don\'t press back button</string>
    <string name="webex_login_success_msg">Logged in successfully in your WebEx account, please wait we will connect your meeting, don\'t press back button</string>
    <string name="webex_meeting_details_not_available">Oops! Your WebEx Meeting Details are not available!</string>
    <string name="cancel">Cancel</string>
    <string name="all_day">All-Day</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="okay">Okay</string>
    <string name="loading">loading</string>
    <string name="call_connect">Connecting Call...</string>
    <string name="webex_login">WebEx login portal</string>
    <string name="meeting_alert">Meeting Alert</string>

</resources>