<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/receivingVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_16dp"
            android:text="@string/receiving_video"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/receivingVideoSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receivingVideo" />
        <TextView
            android:id="@+id/receivingAudio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_16dp"
            android:text="@string/receiving_audio"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receivingVideoSeparator" />

        <View
            android:id="@+id/receivingAudioSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receivingAudio" />
        <TextView
            android:id="@+id/receivingSharing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_16dp"
            android:text="@string/receiving_sharing"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receivingAudioSeparator" />

        <View
            android:visibility="gone"
            android:id="@+id/receivingSharingSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receivingSharing" />

        <TextView
            android:id="@+id/scalingMode"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:paddingVertical="@dimen/dimen_16dp"
            android:text="@string/scaling_mode"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receivingSharingSeparator" />

        <View
            android:visibility="gone"
            android:id="@+id/scalingTypeSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scalingMode" />

        <TextView
            android:id="@+id/compositeStream"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:paddingVertical="@dimen/dimen_16dp"
            android:text="@string/composite_stream"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:enabled="false"
            android:alpha="0.3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scalingTypeSeparator" />

        <View
            android:id="@+id/compositeStreamSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/compositeStream" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_16dp"
            android:text="@android:string/cancel"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/compositeStreamSeparator" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>